# music-player

./: README.md  package-lock.json  package.json
docs/: MANUAL.md  MANUAL_RU.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: audio.rs  ffmpeg_source.rs  lib.rs  media_controls.rs  scanner.rs
src/lib/: gamepad.ts  types.ts  ui-sfx.ts
src/lib/components/: AlbumCard.svelte  AlbumGrid.svelte  AlbumView.svelte  FocusView.svelte  MiniPlayer.svelte  OptionsMenu.svelte  PS2Btn.svelte  PlaylistGrid.svelte  PlaylistView.svelte  ProgressBar.svelte  SpinningCover.svelte  StatsView.svelte  ViewModeBar.svelte  VolumeControl.svelte
src/lib/stores/: i18n.ts  library.ts  player.ts  playlists.ts  updates.ts  viewMode.ts
src/routes/: +page.svelte
